--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Movie Ticket Booking
+APP_NAME="Movie Ticket Booking"
 APP_ENV=local
 APP_KEY=base64:AOOqhQlfMZUB5WbTY40nLOvJ2dEv8m9s1Ag1UdNKcjw=
 APP_DEBUG=true
